--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <body>
 	<header class="page-header">
-		<div class="page-header__wrap">
+		<div class="page-header__wrap page-header__wrap--big">
 			<div class="page-header-top">
 				<div class="logo">
 					<a class="logo__link" href="index.html">
-						<img src="img/logo.png" class="logo__img" alt="logo">
+						<img src="img/glasses.png" class="logo__img" alt="logo">
+						<span class="logo__title">Pink</span>
 					</a>
 				</div>
 				<button class="open-menu-btn"></button>
@@ -29,7 +30,7 @@
 				</div>
 			</div>
 
-			<h1 class="page-title page-title--big">Взгляните на жизнь иначе!</h1>	
+			<h1 class="page-title page-title--min">Взгляните на жизнь иначе!</h1>	
 		</div>
 		
 		<div class="mobile-app">
@@ -64,9 +65,21 @@
 				<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
 			</div>
 		</div>
+
+		<div class="effect">
+			<div class="effect__img">
+				<img src="img/24.png" alt="24">
+			</div>
+			<div class="effect__content">
+				<h2 class="effect__title">Эффект на 24 часа!</h2>
+				<p class="effect__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+			</div>
+		</div>
+
 		<div class="slider">
 			<div class="review">
 				<h2 class="review__title">Николай Петров</h2>
+				<p class="review__info">25 лет, водитель трамвая</p>
 				<p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
 			</div>	
 			<div class="pages">
@@ -117,12 +130,18 @@
 	<footer class="page-footer">
 		<p class="page-footer__title">Остались вопросы? Свяжитесь с нами!</p>
 		<section class="contacts">
-			<h2 class="contacts__title">Звоните</h2>
-			<p class="contacts__text">+7 (812) 555-66-66</p>
-			<h2 class="contacts__title">Пишите</h2>
-			<p class="contacts__text">mail@htmlacademy.ru</p>
-			<h2 class="contacts__title">Приежайте в гости</h2>
-			<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
+			<div class="contacts__row">
+				<h2 class="contacts__title">Звоните</h2>
+				<p class="contacts__text">+7 (812) 555-66-66</p>
+			</div>
+			<div class="contacts__row">
+				<h2 class="contacts__title">Пишите</h2>
+				<p class="contacts__text">mail@htmlacademy.ru</p>
+			</div>
+			<div class="contacts__row">
+				<h2 class="contacts__title">Приежайте в гости</h2>
+				<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
+			</div>
 		</section>
 	</footer>
   <!-- <script src="js/script.js"></script> -->
