--- a/post.html
+++ b/post.html
@@ -15,7 +15,8 @@
 			<div class="page-header-top">
 				<div class="logo">
 					<a class="logo__link" href="index.html">
-						<img src="img/logo.png" class="logo__img" alt="logo">
+						<img src="img/glasses.png" class="logo__img" alt="logo">
+						<span class="logo__title">Pink</span>
 					</a>
 				</div>
 				<button class="open-menu-btn"></button>
@@ -66,7 +67,7 @@
 	<footer class="main-footer">
 		<div class="logo">
 			<a class="logo__link" href="index.html">
-				<img src="img/footer-logo.png" class="logo__img" alt="logo">
+				<img src="img/footer-logo.png" alt="logo">
 			</a>
 		</div>
 		<div class="social-icons">
