--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,8 @@
 			<div class="page-header-top">
 				<div class="logo">
 					<a class="logo__link" href="index.html">
-						<img src="img/logo.png" class="logo__img" alt="logo">
+						<img src="img/glasses.png" class="logo__img" alt="logo">
+						<span class="logo__title">Pink</span>
 					</a>
 				</div>
 				<button class="open-menu-btn"></button>
@@ -57,6 +58,7 @@
 
 	<div class="pagination">
 		<ul class="pagination__list">
+			<li class="pagination__title">Стр.</li>
 			<li class="pagination__item"><a href="#" class="pagination__link pagination__link--active">1</a></li>
 			<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
 			<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
@@ -67,7 +69,7 @@
 	<footer class="main-footer">
 		<div class="logo">
 			<a class="logo__link" href="index.html">
-				<img src="img/footer-logo.png" class="logo__img" alt="logo">
+				<img src="img/footer-logo.png" alt="logo">
 			</a>
 		</div>
 		<div class="social-icons">
