--- a/form.html
+++ b/form.html
@@ -14,7 +14,8 @@
 			<div class="page-header-top">
 				<div class="logo">
 					<a class="logo__link" href="index.html">
-						<img src="img/logo.png" class="logo__img" alt="logo">
+						<img src="img/glasses.png" alt="logo" class="logo__img">
+						<span class="logo__title">Pink</span>
 					</a>
 				</div>
 				<button class="open-menu-btn"></button>
@@ -104,10 +105,10 @@
 				
 
 			<div class="wrap wrap--grey">
-				<div class="form-row">
-					<div class="form-row__title">
+				<div class="wrap__title">
 						Количество попутчиков *
 					</div>
+				<div class="form-row form-row--min">
 					<div class="form-row__content">
 						<button class="minus">-</button>
 						<input type="text" disabled class="form-row__count" value="2 чел">
@@ -127,6 +128,7 @@
 						<div class="form-row">
 							<label for="traveler-name" class="form-row__title">Имя: *</label>
 							<input type="text" placeholder="Введите ваше имя" id="traveler-name">
+							<button class="delete">Удалить</button>
 						</div>
 						<div class="form-row">
 							<label for="traveler-nick" class="form-row__title">Прозвище:</label>
@@ -147,6 +149,7 @@
 						<div class="form-row">
 							<label for="traveler-name2" class="form-row__title">Имя: *</label>
 							<input type="text" placeholder="Введите ваше имя" id="traveler-name2">
+							<button class="delete">Удалить</button>
 						</div>
 						<div class="form-row">
 							<label for="traveler-nick2" class="form-row__title">Прозвище:</label>
@@ -196,42 +199,42 @@
 				<div class="foto-wrap">
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt="" class="foto__img">
+						<img src="img/foto-1.jpg" alt="" class="foto__img">
 						<figcaption class="foto__name">img-1.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt=""  class="foto__img">
+						<img src="img/foto-1.jpg" alt=""  class="foto__img">
 						<figcaption class="foto__name">img-2.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt=""  class="foto__img">
+						<img src="img/foto-1.jpg" alt=""  class="foto__img">
 						<figcaption class="foto__name">img-3.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt=""  class="foto__img">
+						<img src="img/foto-1.jpg" alt=""  class="foto__img">
 						<figcaption class="foto__name">img-4.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt=""  class="foto__img">
+						<img src="img/foto-1.jpg" alt=""  class="foto__img">
 						<figcaption class="foto__name">img-5.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt=""  class="foto__img">
+						<img src="img/foto-1.jpg" alt=""  class="foto__img">
 						<figcaption class="foto__name">img-6.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt=""  class="foto__img">
+						<img src="img/foto-1.jpg" alt=""  class="foto__img">
 						<figcaption class="foto__name">img-7.jpg</figcaption>
 					</figure>
 					<figure class="foto">
 						<button class="foto__close"></button>
-						<img src="img/foto-1.png" alt=""  class="foto__img">
+						<img src="img/foto-1.jpg" alt=""  class="foto__img">
 						<figcaption class="foto__name">img-8.jpg</figcaption>
 					</figure>
 				</div>
@@ -247,7 +250,7 @@
 	<footer class="main-footer">
 		<div class="logo">
 			<a class="logo__link" href="index.html">
-				<img src="img/footer-logo.png" class="logo__img" alt="logo">
+				<img src="img/footer-logo.png" alt="logo">
 			</a>
 		</div>
 		<div class="social-icons">
