--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 				<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
 			</div>
 		</section>
+		<div class="map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5720063375354!2d30.324620504508324!3d59.93924379994647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2s!4v1432215594502"></iframe>
+		</div>
 	</footer>
   <!-- <script src="js/script.js"></script> -->
 
