Верстка главной для пк

--- a/index.html
+++ b/index.html
@@ -53,14 +53,17 @@
 		</div>
 		<div class="features">
 			<div class="features-item">
+				<img src="img/iphone-screen-desktop-1@1x.png" alt="iphone" class="features-item__image">
 				<h2 class="features-item__title">Поднимает настроение</h2>
 				<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
 			</div>
 			<div class="features-item">
+				<img src="img/iphone-screen-desktop-2@1x.png" alt="iphone" class="features-item__image">
 				<h2 class="features-item__title">Меняет мир вокруг</h2>
 				<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
 			</div>
 			<div class="features-item">
+				<img src="img/iphone-screen-desktop-3@1x.png" alt="iphone" class="features-item__image">
 				<h2 class="features-item__title">Заводит новых друзей</h2>
 				<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
 			</div>
@@ -73,6 +76,7 @@
 			<div class="effect__content">
 				<h2 class="effect__title">Эффект на 24 часа!</h2>
 				<p class="effect__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+				<a href="" class="effect__link">Узнать больше об исследовании</a>
 			</div>
 		</div>
 
@@ -88,6 +92,10 @@
 					<li class="pages__item"><a href="#" class="pages__link">2</a></li>
 					<li class="pages__item"><a href="#" class="pages__link">3</a></li>
 				</ul>
+			</div>
+			<div class="nav-btns">
+				<div class="nav-btns__prev">Назад</div>
+				<div class="nav-btns__next">Вперед</div>
 			</div>
 		</div>
 		<div class="slider slider--grey">
