form для desktop

--- a/form.html
+++ b/form.html
@@ -124,16 +124,18 @@
 							1
 						</div>
 					</div>
-					<div class="right-col">
+					<div class="middle-col">
 						<div class="form-row">
 							<label for="traveler-name" class="form-row__title">Имя: *</label>
 							<input type="text" placeholder="Введите ваше имя" id="traveler-name">
-							<button class="delete">Удалить</button>
 						</div>
 						<div class="form-row">
 							<label for="traveler-nick" class="form-row__title">Прозвище:</label>
 							<input type="text" placeholder="Ну как же без этого!" id="traveler-nick">
 						</div>
+					</div>
+					<div class="right-col">
+						<button class="delete">Удалить</button>
 					</div>
 				</div>
 				<div class="traveler">
@@ -145,16 +147,18 @@
 							2
 						</div>
 					</div>
-					<div class="right-col">
+					<div class="middle-col">
 						<div class="form-row">
 							<label for="traveler-name2" class="form-row__title">Имя: *</label>
 							<input type="text" placeholder="Введите ваше имя" id="traveler-name2">
-							<button class="delete">Удалить</button>
 						</div>
 						<div class="form-row">
 							<label for="traveler-nick2" class="form-row__title">Прозвище:</label>
 							<input type="text" placeholder="Ну как же без этого!" id="traveler-nick2">
 						</div>
+					</div>
+					<div class="right-col">
+						<button class="delete">Удалить</button>
 					</div>
 				</div>
 			</div>
