--- a/blog.html
+++ b/blog.html
@@ -12,61 +12,70 @@
 	<header class="page-header">
 		<div class="page-header__wrap">
 			<div class="page-header-top">
-				<div class="logo">
-					<a class="logo__link" href="index.html">
-						<img src="img/glasses.png" class="logo__img" alt="logo">
-						<span class="logo__title">Pink</span>
-					</a>
-				</div>
-				<button class="open-menu-btn"></button>
-				<div class="mobile-menu">
-					<ul class="mobile-menu__list">
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Информация</a></li>
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Возможности</a></li>
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Отзывы</a></li>
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Стоимость</a></li>
-					</ul>
+				<div class="container">
+					<div class="logo  logo--left">
+						<a class="logo__link" href="index.html">
+							<picture>
+								<source media="(min-width:941px)" srcset="img/logotype-white-desktop.svg">
+								<source media="(min-width:481px)" srcset="img/logotype-white-tablet.svg">
+								<img src="img/logotype-white-mobile.svg">
+							</picture>
+						</a>
+					</div>
+					<button class="open-menu-btn"></button>
+					<div class="mobile-menu">
+						<ul class="mobile-menu__list">
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Информация</a></li>
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Возможности</a></li>
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Отзывы</a></li>
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Стоимость</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-
-			<h1 class="page-title">Блог путешественников, пользователей Пинк</h1>	
+			<div class="container">
+				<h1 class="page-title">Блог путешественников, пользователей Пинк</h1>	
+			</div>
 		</div>
 	</header>
 
-	<div class="blog">
-		<article class="blog-item">
-			<h2 class="blog-item__title">Антон и Надя в Тайланде</h2>
-			<div class="blog-item__date">Опубликовано: 6 месяцев назад</div>
-			<p class="blog-item__text">Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
-		</article>
-		<article class="blog-item">
-			<h2 class="blog-item__title">Гастрольный тур «Кубанских борщеваров»</h2>
-			<div class="blog-item__date">Опубликовано: 5 лет назад</div>
-			<p class="blog-item__text">Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
-		</article>
-		<article class="blog-item">
-			<h2 class="blog-item__title">Чета Болонских в Париже</h2>
-			<div class="blog-item__date">Опубликовано: 100 лет назад</div>
-			<p class="blog-item__text">Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
-		</article>
-		<article class="blog-item">
-			<h2 class="blog-item__title">Путешествие на яхте сеньора Христофора</h2>
-			<div class="blog-item__date">Опубликовано: 523 года назад</div>
-			<p class="blog-item__text">Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
-		</article>
-	</div>
+	<div class="container">
+		<div class="blog">
+			<article class="blog-item">
+				<h2 class="blog-item__title">Антон и Надя в Тайланде</h2>
+				<div class="blog-item__date">Опубликовано: 6 месяцев назад</div>
+				<p class="blog-item__text">Читайте рассказ о том, как семейная пара посещала Тайланд, стараясь максимально избегать избитых туристических мест и районов.</p>
+			</article>
+			<article class="blog-item">
+				<h2 class="blog-item__title">Гастрольный тур «Кубанских борщеваров»</h2>
+				<div class="blog-item__date">Опубликовано: 5 лет назад</div>
+				<p class="blog-item__text">Возрождение культурных традиций уже не за горами. Фолк-металл-рэп-группа из столицы Кубани провела весь год в гастролях по России и ближнему (а также среднему) зарубежью.</p>
+			</article>
+			<article class="blog-item">
+				<h2 class="blog-item__title">Чета Болонских в Париже</h2>
+				<div class="blog-item__date">Опубликовано: 100 лет назад</div>
+				<p class="blog-item__text">Невероятные приключения русских во Франции. Интриги, предательства, погони и, разумеется, убийства. Читайте криминально-исторический трактат в двух томах.</p>
+			</article>
+			<article class="blog-item">
+				<h2 class="blog-item__title">Путешествие на яхте сеньора Христофора</h2>
+				<div class="blog-item__date">Опубликовано: 523 года назад</div>
+				<p class="blog-item__text">Группа испанцев отдыхала на яхте, но они даже не представляли, какие открытия ждут их впереди и чем это обернется для всего человечества!</p>
+			</article>
+		</div>
+	
 
-	<div class="pagination">
-		<ul class="pagination__list">
-			<li class="pagination__title">Стр.</li>
-			<li class="pagination__item"><a href="#" class="pagination__link pagination__link--active">1</a></li>
-			<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
-			<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
-			<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
-		</ul>
+		<div class="pagination">
+			<ul class="pagination__list">
+				<li class="pagination__title">Стр.</li>
+				<li class="pagination__item"><a href="#" class="pagination__link pagination__link--active">1</a></li>
+				<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
+				<li class="pagination__item"><a href="#" class="pagination__link">3</a></li>
+				<li class="pagination__item"><a href="#" class="pagination__link">4</a></li>
+			</ul>
+		</div>
 	</div>
 	
-	<footer class="main-footer">
+	<footer class="main-footer container">
 		<div class="logo">
 			<a class="logo__link" href="index.html">
 				<img src="img/footer-logo.png" alt="logo">
