--- a/index.html
+++ b/index.html
@@ -13,35 +13,43 @@
 	<header class="page-header">
 		<div class="page-header__wrap page-header__wrap--big">
 			<div class="page-header-top">
-				<div class="logo">
-					<a class="logo__link" href="index.html">
-						<img src="img/glasses.png" class="logo__img" alt="logo">
-						<span class="logo__title">Pink</span>
-					</a>
-				</div>
-				<button class="open-menu-btn"></button>
-				<div class="mobile-menu">
-					<ul class="mobile-menu__list">
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Информация</a></li>
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Возможности</a></li>
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Отзывы</a></li>
-						<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Стоимость</a></li>
-					</ul>
+				<div class="container clearfix">
+					<div class="logo logo--left">
+						<a class="logo__link" href="index.html">
+							<picture>
+								<source media="(min-width:941px)" srcset="img/logotype-white-desktop.svg">
+								<source media="(min-width:481px)" srcset="img/logotype-white-tablet.svg">
+								<img src="img/logotype-white-mobile.svg">
+							</picture>
+						</a>
+					</div>
+					<button class="open-menu-btn"></button>
+					<div class="mobile-menu">
+						<ul class="mobile-menu__list">
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Информация</a></li>
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Возможности</a></li>
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Отзывы</a></li>
+							<li class="mobile-menu__item"><a class="mobile-menu__link" href="">Стоимость</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-
-			<h1 class="page-title page-title--min">Взгляните на жизнь иначе!</h1>	
+			<div class="container">
+				<h1 class="page-title page-title--min">Взгляните на жизнь иначе!</h1>	
+			</div>
 		</div>
 		
-		<div class="mobile-app">
-			<a href="" class="mobile-app__link-down">Скачать приложение</a>
-			<div class="mobile-app__logos">	
-				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_apple.png" alt="Apple"></a>
-				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_android.png" alt="Andoid"></a>
-				<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_win.png" alt="Windows Phone"></a>
-			</div>
-			<div class="mobile-app__info">
-				Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+		<div class="container">
+			<div class="mobile-app">
+				<a href="" class="mobile-app__link-down">Скачать приложение</a>
+				<div class="mobile-app__logos">	
+					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_apple.png" alt="Apple"></a>
+					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_android.png" alt="Andoid"></a>
+					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_win.png" alt="Windows Phone"></a>
+				</div>
+				<div class="mobile-app__info">
+					Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+				</div>
 			</div>
 		</div>
 	</header>
@@ -52,50 +60,56 @@
 			<p class="information__text">Нам есть, что вам предложить!</p>
 		</div>
 		<div class="features">
-			<div class="features-item">
-				<img src="img/iphone-screen-desktop-1@1x.png" alt="iphone" class="features-item__image">
-				<h2 class="features-item__title">Поднимает настроение</h2>
-				<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-			</div>
-			<div class="features-item">
-				<img src="img/iphone-screen-desktop-2@1x.png" alt="iphone" class="features-item__image">
-				<h2 class="features-item__title">Меняет мир вокруг</h2>
-				<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-			</div>
-			<div class="features-item">
-				<img src="img/iphone-screen-desktop-3@1x.png" alt="iphone" class="features-item__image">
-				<h2 class="features-item__title">Заводит новых друзей</h2>
-				<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+			<div class="container">
+				<div class="features-item">
+					<img src="img/iphone-screen-desktop-1@1x.png" alt="iphone" class="features-item__image">
+					<h2 class="features-item__title">Поднимает настроение</h2>
+					<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+				</div>
+				<div class="features-item">
+					<img src="img/iphone-screen-desktop-2@1x.png" alt="iphone" class="features-item__image">
+					<h2 class="features-item__title">Меняет мир вокруг</h2>
+					<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+				</div>
+				<div class="features-item">
+					<img src="img/iphone-screen-desktop-3@1x.png" alt="iphone" class="features-item__image">
+					<h2 class="features-item__title">Заводит новых друзей</h2>
+					<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+				</div>
 			</div>
 		</div>
 
 		<div class="effect">
-			<div class="effect__img">
-				<img src="img/24.png" alt="24">
-			</div>
-			<div class="effect__content">
-				<h2 class="effect__title">Эффект на 24 часа!</h2>
-				<p class="effect__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
-				<a href="" class="effect__link">Узнать больше об исследовании</a>
+			<div class="container">
+				<div class="effect__img">
+					<img src="img/24.png" alt="24">
+				</div>
+				<div class="effect__content">
+					<h2 class="effect__title">Эффект на 24 часа!</h2>
+					<p class="effect__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+					<a href="" class="effect__link">Узнать больше об исследовании</a>
+				</div>
 			</div>
 		</div>
 
 		<div class="slider">
-			<div class="review">
-				<h2 class="review__title">Николай Петров</h2>
-				<p class="review__info">25 лет, водитель трамвая</p>
-				<p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-			</div>	
-			<div class="pages">
-				<ul class="pages__list">
-					<li class="pages__item"><a href="#" class="pages__link pages__link--active">1</a></li>
-					<li class="pages__item"><a href="#" class="pages__link">2</a></li>
-					<li class="pages__item"><a href="#" class="pages__link">3</a></li>
-				</ul>
-			</div>
-			<div class="nav-btns">
-				<div class="nav-btns__prev">Назад</div>
-				<div class="nav-btns__next">Вперед</div>
+			<div class="container">
+				<div class="review">
+					<h2 class="review__title">Николай Петров</h2>
+					<p class="review__info">25 лет, водитель трамвая</p>
+					<p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+				</div>	
+				<div class="pages">
+					<ul class="pages__list">
+						<li class="pages__item"><a href="#" class="pages__link pages__link--active">1</a></li>
+						<li class="pages__item"><a href="#" class="pages__link">2</a></li>
+						<li class="pages__item"><a href="#" class="pages__link">3</a></li>
+					</ul>
+				</div>
+				<div class="nav-btns">
+					<div class="nav-btns__prev">Назад</div>
+					<div class="nav-btns__next">Вперед</div>
+				</div>
 			</div>
 		</div>
 		<div class="slider slider--grey">
@@ -136,23 +150,45 @@
 	</div>
 	
 	<footer class="page-footer">
-		<p class="page-footer__title">Остались вопросы? Свяжитесь с нами!</p>
-		<section class="contacts">
-			<div class="contacts__row">
-				<h2 class="contacts__title">Звоните</h2>
-				<p class="contacts__text">+7 (812) 555-66-66</p>
-			</div>
-			<div class="contacts__row">
-				<h2 class="contacts__title">Пишите</h2>
-				<p class="contacts__text">mail@htmlacademy.ru</p>
-			</div>
-			<div class="contacts__row">
-				<h2 class="contacts__title">Приежайте в гости</h2>
-				<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
-			</div>
-		</section>
-		<div class="map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5720063375354!2d30.324620504508324!3d59.93924379994647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2s!4v1432215594502"></iframe>
+		<div class="container">
+			<p class="page-footer__title">Остались вопросы? Свяжитесь с нами!</p>
+			<section class="contacts">
+				<div class="contacts__row">
+					<h2 class="contacts__title">Звоните</h2>
+					<p class="contacts__text">+7 (812) 555-66-66</p>
+				</div>
+				<div class="contacts__row">
+					<h2 class="contacts__title">Пишите</h2>
+					<p class="contacts__text">mail@htmlacademy.ru</p>
+				</div>
+				<div class="contacts__row">
+					<h2 class="contacts__title">Приежайте в гости</h2>
+					<p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
+				</div>
+			</section>
+		</div>
+	</footer>
+	
+	<div class="map">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5720063375354!2d30.324620504508324!3d59.93924379994647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2s!4v1432215594502"></iframe>
+	</div>
+
+	<footer class="main-footer container">
+		<div class="logo">
+			<a class="logo__link" href="index.html">
+				<img src="img/footer-logo.png" alt="logo">
+			</a>
+		</div>
+		<div class="social-icons">
+			<a href="" class="social-icon social-icon--tw"></a>
+			<a href="" class="social-icon social-icon--fb"></a>
+			<a href="" class="social-icon social-icon--yt"></a>
+		</div>
+		<div class="developer">
+			<div class="developer__text">Разработано</div>
+			<a href="" class="developer__link">
+				<img src="img/h-academy.png" alt="HTML Academy">
+			</a>
 		</div>
 	</footer>
   <!-- <script src="js/script.js"></script> -->
