--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,10 @@
 	<footer class="main-footer container">
 		<div class="logo">
 			<a class="logo__link" href="index.html">
-				<img src="img/footer-logo.png" alt="logo">
+				<picture>
+					<source media="(min-width:941px)" srcset="img/logotype-blue-desktop.svg">
+					<img src="img/logotype-blue-tablet.svg">
+				</picture>
 			</a>
 		</div>
 		<div class="social-icons">
@@ -89,7 +92,7 @@
 		<div class="developer">
 			<div class="developer__text">Разработано</div>
 			<a href="" class="developer__link">
-				<img src="img/h-academy.png" alt="HTML Academy">
+				<img src="img/htmlacademy.svg" alt="HTML Academy">
 			</a>
 		</div>
 	</footer>
