--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 			<div class="mobile-app">
 				<a href="" class="mobile-app__link-down">Скачать приложение</a>
 				<div class="mobile-app__logos">	
-					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_apple.png" alt="Apple"></a>
-					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_android.png" alt="Andoid"></a>
-					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/app_win.png" alt="Windows Phone"></a>
+					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/apple-logo.svg" alt="Apple"></a>
+					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/android-logo.svg" alt="Andoid"></a>
+					<a class="mobile-app__link" href=""><img class="mobile-app__img" src="img/microsoft-logo.svg" alt="Windows Phone"></a>
 				</div>
 				<div class="mobile-app__info">
 					Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
@@ -62,17 +62,32 @@
 		<div class="features">
 			<div class="container">
 				<div class="features-item">
-					<img src="img/iphone-screen-desktop-1@1x.png" alt="iphone" class="features-item__image">
+					<img src="img/iphone-screen-desktop-1@1x.png" 
+						width="292" 
+						srcset="img/iphone-screen-desktop-1@2x.png 2x"
+						alt="iphone" 
+						class="features-item__image">
+
 					<h2 class="features-item__title">Поднимает настроение</h2>
 					<p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
 				</div>
 				<div class="features-item">
-					<img src="img/iphone-screen-desktop-2@1x.png" alt="iphone" class="features-item__image">
+					<img src="img/iphone-screen-desktop-2@1x.png" 
+						width="292" 
+						srcset="img/iphone-screen-desktop-2@2x.png 2x"
+						alt="iphone" 
+						class="features-item__image">
+
 					<h2 class="features-item__title">Меняет мир вокруг</h2>
 					<p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
 				</div>
 				<div class="features-item">
-					<img src="img/iphone-screen-desktop-3@1x.png" alt="iphone" class="features-item__image">
+					<img src="img/iphone-screen-desktop-3@1x.png" 
+						width="292" 
+						srcset="img/iphone-screen-desktop-3@2x.png 2x"
+						alt="iphone" 
+						class="features-item__image">
+
 					<h2 class="features-item__title">Заводит новых друзей</h2>
 					<p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
 				</div>
@@ -176,7 +191,10 @@
 	<footer class="main-footer container">
 		<div class="logo">
 			<a class="logo__link" href="index.html">
-				<img src="img/footer-logo.png" alt="logo">
+				<picture>
+					<source media="(min-width:941px)" srcset="img/logotype-blue-desktop.svg">
+					<img src="img/logotype-blue-tablet.svg">
+				</picture>
 			</a>
 		</div>
 		<div class="social-icons">
@@ -187,7 +205,7 @@
 		<div class="developer">
 			<div class="developer__text">Разработано</div>
 			<a href="" class="developer__link">
-				<img src="img/h-academy.png" alt="HTML Academy">
+				<img src="img/htmlacademy.svg" alt="HTML Academy">
 			</a>
 		</div>
 	</footer>
