--- a/blog.html
+++ b/blog.html
@@ -96,3 +96,9 @@
 			</a>
 		</div>
 	</footer>
+
+	<script src="bower_components/tap/dist/tap.min.js"></script>
+	<script src="js/script.js"></script>
+
+</body>
+</html>
