--- a/form.html
+++ b/form.html
@@ -280,7 +280,8 @@
 			</a>
 		</div>
 	</footer>
-
+	
+	<script src="bower_components/tap/dist/tap.min.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
