--- a/post.html
+++ b/post.html
@@ -92,3 +92,9 @@
 			</a>
 		</div>
 	</footer>
+
+	<script src="bower_components/tap/dist/tap.min.js"></script>
+	<script src="js/script.js"></script>
+
+</body>
+</html>
